<resources>
    <string name="app_name">CookHub</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="all_recipes">All Recipes</string>
    <string name="add_edit_image">Add / Edit Image</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="author_name">Author Name</string>
    <string name="preparation_time_minutes">Preparation Time (minutes)</string>
    <string name="enter_ingredient">Enter Ingredient</string>
    <string name="add">Add</string>
    <string name="enter_direction">Enter Direction</string>
    <string name="finish">Finish</string>
    <string name="select_difficulty">select difficulty</string>

    <string name="title_home_screen" translatable="false">It\'s\nCooking\nTime!</string>
    <string name="discover_save_and_share_your_favorite_recipes">Discover, save, and share your favorite recipes</string>
    <string name="get_started">Get Started</string>

    <string name="please_fill_all_the_fields">Please Fill all the Fields</string>


    <string name="dialog_title">Warning!</string>
    <string name="dialog_text">Do you want to the delete all the recipes?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="all_recipes_deleted">All recipes deleted</string>
    <string name="update_recipe">Update Recipe</string>
</resources>