<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.fragments.AddRecipeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:scrollbars="none"
    android:background="@color/white1"
    android:layout_gravity="center"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="recipe_image"/>

        <Button
            android:id="@+id/pick_image_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/add_edit_image"
            android:textSize="14sp"
            android:backgroundTint="@color/green"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_title"
            app:boxStrokeColor="@color/green"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="10dp"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author_name"
            app:boxStrokeColor="@color/green"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="10dp"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preparation_time_minutes"
            app:boxStrokeColor="@color/green"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="10dp"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prepTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/select_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingTop="16dp"/>

        <Spinner
            android:id="@+id/spinnerDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="57dp"
            android:popupBackground="@color/white1"
            android:spinnerMode="dropdown"
            android:background="@drawable/spinner_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:paddingTop="12dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/ingredients_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_ingredient"/>

            <Button
                android:id="@+id/add_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:backgroundTint="@color/green" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directions"
            android:paddingTop="12dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/direction_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_direction"/>

            <Button
                android:id="@+id/add_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:backgroundTint="@color/green"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="10dp"
            android:clipToPadding="true"
            android:clipChildren="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finish_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white"
            app:cornerRadius="16dp"/>

    </LinearLayout>
</ScrollView>