<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.fragments.HomeFragment"
    android:background="@color/white1"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivChefImage"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="home_image"
        android:foregroundGravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/recipe_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/title_home_screen"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivChefImage" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_save_and_share_your_favorite_recipes"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="18dp"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/tvMainTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStartedBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:backgroundTint="@color/green"
        android:contentDescription="start_button"
        android:text="@string/get_started"
        android:textColor="@android:color/white"
        app:cornerRadius="35dp"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="textEnd"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMainTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>